# ua-itarmy-parser

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  run.py  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: test.yml
tests/: classes.py  conftest.py  test_ddos.py
ua_itarmy_parser/: config.py  ddos.py  listener.py  logging.py  main.py
