[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "ua-itarmy-parser"
description = "Парсить офіційний телеграм канал @itarmyofukraine2022 и запускає DDOS на сайти."
version = "0.1.0"
license = "AGPL3"

authors = []

readme = "README.md"

repository = "https://github.com/PerchunPak/ua-itarmy-parser"

[tool.poetry.dependencies]
python = "^3.8"
poetry = "^1"
Telethon = "^1.24.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
pre-commit = "^2.17.0"
mypy = "^0.931"

safety = "^1.10"

pytest = "^7.1"
pytest-cov = "^3.0"
pytest-asyncio = "^0.18.2"
pytest-randomly = "^3.11"

[tool.black]
line-length = 120
target-version = ['py310']
